--- a/src/resoucres/views/dashboard.hbs
+++ b/src/resoucres/views/dashboard.hbs
@@ -126,12 +126,12 @@
                     </div>
                     <div class='col'>
 
-                        <a href='#'>
+                        <a href='/student/get-tuition'>
                             <div class='box-df featured-item'>
                                 <div class='icon'>
                                     <i class='fa fa-usd' aria-hidden='true'></i>
                                 </div>
-                                <span>Tra cứu công nợ</span>
+                                <span>Tra cứu học phí</span>
                             </div>
                         </a>
 
@@ -273,7 +273,7 @@
                                 <div class='icon'>
                                     <i class='fa fa-usd' aria-hidden='true'></i>
                                 </div>
-                                <span>Tra cứu công nợ</span>
+                                <span>Chỉnh sửa Lớp học Phần và lịch dạy</span>
                             </div>
                         </a>
 
