--- a/src/resoucres/views/dashboard.hbs
+++ b/src/resoucres/views/dashboard.hbs
@@ -159,13 +159,7 @@
                                     <img src='images/avatar1.jpg' class='img-responsive' style='object-fit: cover;' />
 
                                 </div>
-                                <div class='text-center'>
-                                    <a
-                                        href='/thong-tin-sinh-vien.html'
-                                        class='color-active'
-                                        lang='db-chitiet-button'
-                                    >Xem chi tiết</a>
-                                </div>
+
                             </div>
                             <div class='col-sm-9'>
                                 <div class='profile-userdoc'>
@@ -268,12 +262,12 @@
                     </div>
                     <div class='col'>
 
-                        <a href='#'>
+                        <a href='teacher/list_lhp?edit=1'>
                             <div class='box-df featured-item'>
                                 <div class='icon'>
-                                    <i class='fa fa-usd' aria-hidden='true'></i>
+                                    <i class='fa fa-wrench' aria-hidden='true'></i>
                                 </div>
-                                <span>Chỉnh sửa Lớp học Phần và lịch dạy</span>
+                                <span>Chỉnh sửa lớp học phần</span>
                             </div>
                         </a>
 
