--- a/src/resoucres/views/featured_form/teacher/list_lhp.hbs
+++ b/src/resoucres/views/featured_form/teacher/list_lhp.hbs
@@ -4,19 +4,20 @@
         {{lhpData.message}}
     </div>
 {{else}}
-    <table class='table table-striped table-hover' style='width: 900px; margin:auto'>
-        <thead>
-            <tr>
-                <th>Tên lớp học phần</th>
-                <th>Trạng thái</th>
-                <th>số lượng tín chỉ</th>
-                <th>Số lượng sinh viên</th>
-                <th>Action</th>
 
-            </tr>
-        </thead>
-        <tbody>
-            {{#if grading}}
+    {{#if grading}}
+        <table class='table table-striped table-hover' style='width: 900px; margin:auto'>
+            <thead>
+                <tr>
+                    <th>Tên lớp học phần</th>
+                    <th>Trạng thái</th>
+                    <th>số lượng tín chỉ</th>
+                    <th>Số lượng sinh viên</th>
+                    <th>Action</th>
+
+                </tr>
+            </thead>
+            <tbody>
                 {{#each lhpData.data}}
 
                     <tr>
@@ -42,39 +43,84 @@
                     </tr>
 
                 {{/each}}
-            {{else}}
-                {{#each lhpData.data}}
-
+            </tbody>
+        </table>
+    {{else}}
+        {{#if edit}}
+            <table class='table table-striped table-hover' style='width: 900px; margin:auto'>
+                <thead>
                     <tr>
-                        <td>{{this.name}}</td>
-                        <td>{{#if this.state}}
-                                Mở
-                            {{else}}
-                                Đóng
-                            {{/if}}</td>
-                        <td>{{this.quantityoftinchi}}</td>
-                        <td>{{this.quantityOfstudents}}</td>
-                        <td>
-
-                            <a href='/teacher/get-edit-lhp-form?lhpId={{this.lhpId}}'>
-                                <button type='button' class='btn btn-secondary'>
-                                    Chỉnh sửa
-
-                                </button>
-                            </a>
-                            <a href='/teacher/remove_lhp?lhpId={{this.lhpId}}'>
-                                <button type='button' class='btn btn-primary'>
-                                    Xóa
-                                </button>
-                            </a>
-
-                        </td>
+                        <th>Tên lớp học phần</th>
+                        <th>Trạng thái</th>
+                        <th>số lượng tín chỉ</th>
+                        <th>Số lượng sinh viên</th>
+                        <th>Action</th>
 
                     </tr>
+                </thead>
+                <tbody>
+                    {{#each lhpData.data}}
 
-                {{/each}}
-            {{/if}}
+                        <tr>
+                            <td>{{this.name}}</td>
+                            <td>{{#if this.state}}
+                                    Mở
+                                {{else}}
+                                    Đóng
+                                {{/if}}</td>
+                            <td>{{this.quantityoftinchi}}</td>
+                            <td>{{this.quantityOfstudents}}</td>
+                            <td>
 
-        </tbody>
-    </table>
+                                <a href='/teacher/get-edit-lhp-form?lhpId={{this.lhpId}}'>
+                                    <button type='button' class='btn btn-secondary'>
+                                        Chỉnh sửa
+
+                                    </button>
+                                </a>
+                                <a href='/teacher/remove_lhp?lhpId={{this.lhpId}}'>
+                                    <button type='button' class='btn btn-primary'>
+                                        Xóa
+                                    </button>
+                                </a>
+
+                            </td>
+
+                        </tr>
+                    {{/each}}
+                </tbody>
+            </table>
+        {{else}}
+            <table class='table table-striped table-hover' style='width: 900px; margin:auto'>
+                <thead>
+                    <tr>
+                        <th>Tên lớp học phần</th>
+                        <th>Trạng thái</th>
+                        <th>số lượng tín chỉ</th>
+                        <th>Số lượng sinh viên</th>
+
+                    </tr>
+                </thead>
+                <tbody>
+                    {{#each lhpData.data}}
+
+                        <tr>
+                            <td>{{this.name}}</td>
+                            <td>{{#if this.state}}
+                                    Mở
+                                {{else}}
+                                    Đóng
+                                {{/if}}</td>
+                            <td>{{this.quantityoftinchi}}</td>
+                            <td>{{this.quantityOfstudents}}</td>
+
+                        </tr>
+
+                    {{/each}}
+                </tbody>
+            </table>
+        {{/if}}
+
+    {{/if}}
+
 {{/if}}
