--- a/src/resoucres/views/login_register_form/mssv_psw.hbs
+++ b/src/resoucres/views/login_register_form/mssv_psw.hbs
@@ -13,6 +13,8 @@
             <p>Tên đăng nhập :{{userData.data.accountName}} </p>
             <hr />
             <p>Mật khẩu : {{userData.data.psw}}</p>
+            <a href='/login-form'>Quay lại trang đăng nhập!</a>
+            <a style='display: block;' href='/register_form'>Đi đến trang đăng ký!</a>
         </div>
 
     </body>
