--- a/src/resoucres/views/login_register_form/loginForm.hbs
+++ b/src/resoucres/views/login_register_form/loginForm.hbs
@@ -52,7 +52,7 @@
                     <label for='teacher'>Đăng nhập cho giáo viên </label><br />
 
                     <button type='submit' class='btn btn-primary'>Đăng nhập</button>
-                    <a href='register_form'>Đăng ký tại đây</a>
+                    <a href='register_form'>Đăng ký sinh viên</a>
 
                 </form>
 
